# st7789-python

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ST7789.py  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
examples/: 320x240.py  framerate.py  gif.py  image.py  round.py  scrolling-text.py  shapes.py
st7789/: __init__.py
tests/: conftest.py  test_dimensions.py  test_display.py  test_setup.py
